--- a/Final Website/styleNew.css
+++ b/Final Website/styleNew.css
@@ -31,12 +31,12 @@ body {
 }
 .linkWrapper > a {
   text-decoration: none;
-  color: rgb(87, 87, 87);
+  color: black;
   text-decoration: underline;
   font-weight: 800;
 }
 .linkWrapper > a:hover {
-  color: rgb(0, 0, 0);
+  color: rgb(87, 87, 87);
 }
 .displayWrapper {
   background-color: #dae3f1;
@@ -48,4 +48,24 @@ body {
     justify-content: center;
     align-items: center;
     background-color: #34568b;
+}
+
+.loader {
+  border: 3px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 3px solid #3498db;
+  width: 20px;
+  height: 20px;
+  -webkit-animation: spin 1.2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
